some adjustment for the picture labels

--- a/portfolio.html
+++ b/portfolio.html
@@ -69,42 +69,49 @@
                     </div>
                 </div> <br /><br />
                 <div class="row">
-                    <div class="col-md-3 col-sm-12 position-relative portfolio-column">
+                    <div class="col-lg-3 col-md-12 position-relative portfolio-column">
                         <a href="images/1.jpg" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-4">
                             <img src="images/1.jpg" alt="Bridge" title="Bridge" class="img-fluid">
                         </a>
                         <div class="position-absolute">Bridge</div>
                     </div>
-                    <div class=" col-md-3 col-sm-12 position-relative portfolio-column">
+                    <div class=" col-lg-3 col-md-12 position-relative portfolio-column">
                         <a href="images/2.jpg" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-4">
                             <img src="images/2.jpg" alt="Bycicle" title="Bycicle" class="img-fluid">
                         </a>
-                        <div class="position-absolute">Bycicle</div>
+                        <div class="position-absolute">Bicycle</div>
                     </div>
+                    <div class="col-lg-3 col-md-12 position-relative portfolio-column"></div>
+                    <div class="col-lg-3 col-md-12 position-relative portfolio-column"></div>
                 </div>
-                <br /><br />
+                
                 <div class="row">
-                    <div class="col-md-3 col-sm-12 position-relative portfolio-column">
+                    <div class="col-lg-3 col-md-12 position-relative portfolio-column">
                         <a href="images/3.jpg" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-4">
                             <img src="images/3.jpg" alt="Gazalle" title="Gazalle" class="img-fluid">
                         </a>
                         <div class="position-absolute">Gazalle</div>
                     </div>
-                    <div class="col-md-3 col-sm-12 position-relative portfolio-column">
+                    <div class="col-lg-3 col-md-12 position-relative portfolio-column">
                         <a href="images/4.jpg" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-4">
                             <img src="images/4.jpg" alt="Bar" title="Bar" class="img-fluid">
                         </a>
                         <div class="position-absolute">Bar</div>
                     </div>
+                    <div class="col-lg-3 col-md-12 position-relative portfolio-column"></div>
+                    <div class="col-lg-3 col-md-12 position-relative portfolio-column"></div>
                 </div>
-                <br /><br />
+                
                 <div class="row">
-                    <div class="col-md-3 col-sm-12 position-relative portfolio-column">
+                    <div class="col-lg-3 col-md-12 position-relative portfolio-column">
                         <a href="images/5.jpg" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-4">
                             <img src="images/5.jpg" alt="Colors" title="Colors" class="img-fluid">
-
+                        </a>
                             <div class="position-absolute">Colors</div>
                     </div>
+                    <div class="col-lg-3 col-md-12 position-relative portfolio-column"></div>
+                    <div class="col-lg-3 col-md-12 position-relative portfolio-column"></div>
+                    <div class="col-lg-3 col-md-12 position-relative portfolio-column"></div>
                 </div>
             </div>
         </div>
