--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <div class="container-fuild main">
             <div style="margin: 0 auto;" class="col-md-8">
             <header class="row header-main">
-                    <div class="col-md-7">
+                    <div class="col-md-7 col-sm-12">
                         <h2 class="header-h2">
-                            Ashkan Ramezani
+                            Ashkan Ramezani 
                         </h2>
                     </div>
                     <div class="col-md-5">
@@ -27,6 +27,9 @@
                                       </button>
                             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                                 <ul class="navbar-nav">
+                                        <li class="nav-item ">
+                                                <a class="nav-link" href="https://reaver2021.github.io/Project-1/">Project </a>
+                                            </li>
                                   <li class="nav-item active">
                                     <a class="nav-link" href="index.html">About <span class="sr-only">(current)</span></a>
                                   </li>
@@ -73,7 +76,6 @@
             <footer class="row footer-custom">
                 <p>Copyright © by Ashkan Ramezani</p>
             </footer>
-        </div>
-        </div>
+        </div> </div>
     </body>
 </html>
