--- a/portfolio.html
+++ b/portfolio.html
@@ -42,6 +42,9 @@
                         </button>
                         <div class="collapse navbar-collapse" id="navbarNavDropdown">
                             <ul class="navbar-nav">
+                                    <li class="nav-item ">
+                                            <a class="nav-link" href="https://reaver2021.github.io/Project-1/">Project </a>
+                                        </li>
                                 <li class="nav-item ">
                                     <a class="nav-link" href="index.html">About </a>
                                 </li>
