--- a/contact.html
+++ b/contact.html
@@ -18,41 +18,52 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
 
 <body>
     <div class="container-fuild main">
         <div style="margin: 0 auto;" class="col-md-8">
             <header class="row header-main">
-                <div class="col-md-7">
+                <div class="col-md-4">
                     <h2 class="header-h2">
                         Ashkan Ramezani
                     </h2>
                 </div>
-                <div class="col-md-5">
+                <div class="col-md-8">
                     <nav class="navbar navbar-expand-lg navbar-light ">
-                        <button class="navbar-toggler" type="button" data-toggle="collapse"
-                            data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
-                            aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
-                        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                            <ul class="navbar-nav">
-                                <li class="nav-item ">
-                                    <a class="nav-link" href="https://reaver2021.github.io/Project-1/">Project </a>
-                                </li>
-                                <li class="nav-item ">
-                                    <a class="nav-link" href="index.html">About </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="portfolio.html">Portfolio</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link active" href="contact.html">Contact </a>
-                                </li>
-                            </ul>
-                        </div>
-                    </nav>
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                                <span class="navbar-toggler-icon"></span>
+                              </button>
+                    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                        <ul class="navbar-nav">
+                            <li class="nav-item ">
+                                <a class="nav-link" target="_blank" href="https://github.com/deadmosquito/Project2">Project 2</a>
+                            </li>
+                            <li class="nav-item ">
+                                <a class="nav-link" target="_blank" href="https://reaver2021.github.io/Project-1/">Project 1</a>
+                            </li>
+                          <li class="nav-item ">
+                            <a class="nav-link" href="index.html">About </a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="portfolio.html">Portfolio</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link active" href="contact.html">Contact<span class="sr-only">(current)</span></a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" target="_blank" href="https://github.com/ashkaning"> <i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" target="_blank" href="https://www.linkedin.com/in/ashkan-ramezani-90588359/"> <i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a>
+                          </li>
+                         
+
+                        </ul>
+                    </div>
+                </nav>
 
                 </div>
 
