--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                                     <a class="nav-link" href="contact.html">Contact</a>
                                   </li>
                                     <li class="nav-item">
-                                    <a class="nav-link" href="https://drive.google.com/open?id=1i-GkoxGpAuE0D_G6jSjQO7zAA7v9trw9">Resume</a>
+                                    <a class="nav-link" target="_blank" href="https://drive.google.com/open?id=1i-GkoxGpAuE0D_G6jSjQO7zAA7v9trw9">Resume</a>
                                   </li>
                                   <li class="nav-item">
                                     <a class="nav-link" target="_blank" href="https://github.com/ashkaning"> <i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
