--- a/contact.html
+++ b/contact.html
@@ -53,6 +53,9 @@
                           <li class="nav-item">
                             <a class="nav-link active" href="contact.html">Contact<span class="sr-only">(current)</span></a>
                           </li>
+                            <li class="nav-item">
+                                    <a class="nav-link" target="_blank" href="https://drive.google.com/open?id=1i-GkoxGpAuE0D_G6jSjQO7zAA7v9trw9">Resume</a>
+                                  </li>
                           <li class="nav-item">
                             <a class="nav-link" target="_blank" href="https://github.com/ashkaning"> <i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
                           </li>
