--- a/contact.html
+++ b/contact.html
@@ -33,40 +33,42 @@
                 </div>
                 <div class="col-md-8">
                     <nav class="navbar navbar-expand-lg navbar-light ">
-                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                                <span class="navbar-toggler-icon"></span>
-                              </button>
-                    <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                        <ul class="navbar-nav">
-                            <li class="nav-item ">
-                                <a class="nav-link" target="_blank" href="https://github.com/deadmosquito/Project2">Project 2</a>
-                            </li>
-                            <li class="nav-item ">
-                                <a class="nav-link" target="_blank" href="https://reaver2021.github.io/Project-1/">Project 1</a>
-                            </li>
-                          <li class="nav-item ">
-                            <a class="nav-link" href="index.html">About </a>
-                          </li>
-                          <li class="nav-item">
-                            <a class="nav-link" href="portfolio.html">Portfolio</a>
-                          </li>
-                          <li class="nav-item">
-                            <a class="nav-link active" href="contact.html">Contact<span class="sr-only">(current)</span></a>
-                          </li>
-                            <li class="nav-item">
-                                    <a class="nav-link" target="_blank" href="https://drive.google.com/open?id=1i-GkoxGpAuE0D_G6jSjQO7zAA7v9trw9">Resume</a>
-                                  </li>
-                          <li class="nav-item">
-                            <a class="nav-link" target="_blank" href="https://github.com/ashkaning"> <i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
-                          </li>
-                          <li class="nav-item">
-                            <a class="nav-link" target="_blank" href="https://www.linkedin.com/in/ashkan-ramezani-90588359/"> <i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a>
-                          </li>
-                         
+                        <button class="navbar-toggler" type="button" data-toggle="collapse"
+                            data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
+                            aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                            <ul class="navbar-nav">
 
-                        </ul>
-                    </div>
-                </nav>
+                                <li class="nav-item ">
+                                    <a class="nav-link" href="index.html">About </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="portfolio.html">Portfolio</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link active" href="contact.html">Contact<span
+                                            class="sr-only">(current)</span></a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" target="_blank"
+                                        href="https://drive.google.com/open?id=1SbDJtwJ--d7FTZcPUqRNM1ARCNswfZhX">Resume</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" target="_blank" href="https://github.com/ashkaning"> <i
+                                            class="fa fa-github fa-2x" aria-hidden="true"></i></a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" target="_blank"
+                                        href="https://www.linkedin.com/in/ashkan-ramezani-90588359/"> <i
+                                            class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a>
+                                </li>
+
+
+                            </ul>
+                        </div>
+                    </nav>
 
                 </div>
 
@@ -75,6 +77,7 @@
                 <h2 class="center-middle-h2">
                     Contact
                 </h2>
+                <p style="text-align:center;color:red">The form doesn't currently work. Please <a style="text-decoration: underline;color:blue;" href="mailto:ashkan.ram70@gmail.com">click here</a> to send me an email.</p>
                 <div class="row">
                     <hr class="center-middle-hr">
                     <div style="margin: 0 auto" class="col-md-10">
